fix: z-index

--- a/src/components/navbar/index.module.css
+++ b/src/components/navbar/index.module.css
@@ -1,3 +1,7 @@
+button {
+    z-index: 5000;
+}
+
 .logoutCSS {
     right: 0.5rem;
     position:absolute;
